feat: add nav items

--- a/index.html
+++ b/index.html
@@ -8,52 +8,66 @@
 <body>
 	<header>
 		<div class="logo">
-			LOGO
+			<div class="wrapper">
+				<img src="svg/logo.svg">
+			</div>
+			<span class="title">iHELPER</span>
+			<span class="subtitle">information technology</span>
 		</div>
 		<div class="topnav">
 			<nav>
 				<ul class="func">
-					<li><button>scale in</button></li>
-					<li><button>scale out</button></li>
-					<li><button>dark mode</button></li>
-					<li><button>light mode</button></li>
+					<li><button><img src="svg/func/line.svg"></button></li>
+					<li><button><img src="svg/func/add.svg"></button></li>
+					<li><button><img src="svg/func/moon.svg"></button></li>
+					<li><button><img src="svg/func/sun.svg"></button></li>
 				</ul>
 				<ul class="social">
-					<li><button>fasebook</button></li>
-					<li><button>vk</button></li>
-					<li><button>twitter</button></li>
-					<li><button>instagram</button></li>
+					<li><button><img src="svg/social/facebook.svg"></button></li>
+					<li><button><img src="svg/social/vk.svg"></button></li>
+					<li><button><img src="svg/social/twitter.svg"></button></li>
+					<li><button><img src="svg/social/instagram.svg"></button></li>
 				</ul>
 				<ul class="lang">
-					<li><button>EN</button></li>
-					<li><button>RU</button></li>
+					<li><button><img src="svg/lang/usa.svg"></button></li>
 				</ul>
-				<ul>
+			</nav>
+			<nav>
+				<ul class="topmenu">
+					<li class="logo-min">
+						<span class="title">iHELPER</span>
+						<span class="subtitle">information technology</span>
+					</li>
 					<li><a href="">Development</a></li>
 					<li><a href="">Service</a></li>
 					<li><a href="">Support</a></li>
 				</ul>
 			</nav>
 			<section>
-				<h1>Remote assistance to your computer</h1>
-				<p>IT consulting</p>
+				<div>
+					<h1>Remote assistance to your computer</h1>
+					<h2>IT consulting</h2>
+				</div>
+				<div class="microsoft"><img src="img/microsoft-gold-partner.png"></div>
 			</section>
 		</div>
 	</header>
 	<main>
 		<div class="flex">
 			<div class="sidebar">
-				<nav>
-					<ul>
-						<li><a href="">Main</a></li>
-						<li><a href="">Services</a></li>
-						<li><a href="">Hosting</a></li>
-						<li><a href="">Contact</a></li>
-
-					</ul>
-				</nav>
+				<div class="wrapper">
+					<nav>
+						<ul>
+							<li><a href="">Main</a></li>
+							<li><a href="">Services</a></li>
+							<li><a href="">Hosting</a></li>
+							<li><a href="">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 			<div class="banner">
+				<div class="man"></div>
 				
 			</div>
 			<div class="about">
@@ -64,7 +78,7 @@
 			</div>
 		</div>
 		<div class="search">
-				<input type="" name="">
+				<input placeholder="Search:" type="" name="">
 			<ul>
 				<li>model__</li>
 				<li>model__</li>
@@ -102,6 +116,11 @@
 					<li><a href="">Internal optimization of SPA and sites</a></li>
 					<li><a href="">Turnkey IT solutions creation</a></li>
 				</ul>
+			</nav>
+		</div>
+		<div class="contact"></div>
+		<div class="footnav">
+			<nav>
 				<ul>
 					<li><a href="">Windows</a></li>
 					<li><a href="">macOS</a></li>
