--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>iHelp</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="darkmode.css">
 	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <style>
@@ -26,17 +27,17 @@
 				<ul class="func">
 					<li><button><img src="svg/func/line.svg"></button></li>
 					<li><button><img src="svg/func/add.svg"></button></li>
-					<li><button><img src="svg/func/moon.svg"></button></li>
-					<li><button><img src="svg/func/sun.svg"></button></li>
+					<li><button class="moon"><img src="svg/func/moon.svg"></button></li>
+					<!-- <li><button><img src="svg/func/sun.svg"></button></li> -->
 				</ul>
 				<ul class="social">
-					<li><button><img src="svg/social/facebook.svg"></button></li>
-					<li><button><img src="svg/social/vk.svg"></button></li>
-					<li><button><img src="svg/social/twitter.svg"></button></li>
-					<li><button><img src="svg/social/instagram.svg"></button></li>
+					<li><button name="fb"><img src="svg/social/facebook.svg"></button></li>
+					<li><button name="vk"><img src="svg/social/vk.svg"></button></li>
+					<li><button name="tw"><img src="svg/social/twitter.svg"></button></li>
+					<li><button name="inst"><img src="svg/social/instagram.svg"></button></li>
 				</ul>
 				<ul class="lang">
-					<li><button><img src="svg/lang/usa.svg"></button></li>
+					<li><button><img src="svg/lang/usa.svg"></button>rus</li>
 				</ul>
 			</nav>
 			<nav>
@@ -61,7 +62,7 @@
 	</header>
 	<main id="app">
 		<transition name="modal">
-			<div class="modal" v-if="modalVisible" v-on:click="modalVisible = false; isActive = false;">
+			<div class="modal moda" v-if="modalVisible" v-on:click="modalVisible = false; isActive = false;">
 				<div class="btns">
 	        		<button class="close" v-on:click="modalVisible = !modalVisible; isActive = !isActive">
 	        			<img src="svg/close.svg">
@@ -105,8 +106,8 @@
       <div class="sidebar" v-bind:class="[(modalVisible || isScale || isBackCase) ? 'blur' : '']">
 				<div class="wrapper">
 					<nav>
-						<ul>
-							<li><a href="">Main</a></li>
+						<ul class="l-items">
+							<li><a class="active" href="">Main</a></li>
 							<li><a href="">Services</a></li>
 							<li><a href="">Hosting</a></li>
 							<li><a href="">Contact</a></li>
@@ -128,7 +129,7 @@
             <li>Processor - <br><strong>{{item.processor}}</strong></li>
             <li>Memory - <br><strong>{{item.memory}}</strong></li>
             <li>Graphics - <br><strong>{{item.graphic}}</strong></li>
-            <li>
+            <li class="price">
             	<transition vue-role="transition" name="price">
             		<span v-if="priceVisible">{{item.price}} BYN</span>
            		</transition>
@@ -237,7 +238,7 @@
       </div>
     </div>
 	</main>
-	<footer>
+	<footer class="footer">
 		<div class="wrapper">
 			<div class="navbar">
 				<nav>
@@ -301,5 +302,6 @@
 		</div>
 	</footer>
 <script src="app.js"></script>
+<script src="darkmode.js"></script>
 </body>
 </html>
