--- a/index.html
+++ b/index.html
@@ -1,308 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>iHelp</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="darkmode.css">
-	<link rel="stylesheet" type="text/css" href="zoom.css">
-	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-</head>
-<style>
-	.partner {
-		background: #444;
-	}
-</style>
-<body>
-	<header>
-		<div class="logo">
-			<div class="wrapper">
-				<img src="svg/logo.svg">
-			</div>
-			<span class="title">iHELPER</span>
-			<span class="subtitle">information technology</span>
-		</div>
-		<div class="topnav">
-			<nav>
-				<ul class="func">
-					<li><button class="in"><img src="svg/func/add.svg"></button></li>
-					<li><button class="moon"><img src="svg/func/moon.svg"></button></li>
-				</ul>
-				<ul class="social">
-					<li><button class="fb"><img src="svg/social/facebook.svg"></button></li>
-					<li><button class="vk"><img src="svg/social/vk.svg"></button></li>
-					<li><button class="tw"><img src="svg/social/twitter.svg"></button></li>
-					<li><button class="inst"><img src="svg/social/instagram.svg"></button></li>
-				</ul>
-				<ul class="lang">
-					<li><button><img src="svg/lang/usa.svg"></button>rus</li>
-				</ul>
-			</nav>
-			<nav>
-				<ul class="topmenu">
-					<li class="logo-min">
-						<span class="title">iHELPER</span>
-						<span class="subtitle">information technology</span>
-					</li>
-					<li><a href="">Development</a></li>
-					<li><a href="">Service</a></li>
-					<li><a href="">Support</a></li>
-				</ul>
-			</nav>
-			<section>
-				<div>
-					<h1>Remote assistance to your computer</h1>
-					<h2>IT consulting</h2>
-				</div>
-				<div class="microsoft"><img src="img/microsoft-gold-partner.png"></div>
-			</section>
-		</div>
-	</header>
-	<main id="app">
-		<transition name="modal">
-			<div class="modal moda" v-if="modalVisible" v-on:click="modalVisible = false; isActive = false;">
-				<div class="btns">
-	        		<button class="close" v-on:click="modalVisible = !modalVisible; isActive = !isActive">
-	        			<img src="svg/close.svg">
-	        		</button>
-	            </div>
-	            <div class="content">
-	            	<div>
-	            		<strong>{{item.model}}</strong>
-                        <strong>Processor:</strong>
-                        <ul>
-                           <li>Intel® Celeron® G4900 (2&nbsp;MB, 3,1&nbsp;GHz)</li>
-                           <li>Intel® Pentium® G5400 (4&nbsp;MB, 3,7&nbsp;GHz)</li>
-                           <li>Intel® Core™ i3-8100 (6&nbsp;MB, 3,60&nbsp;GHz)</li>
-                           <li>Intel® Core™ i5-8400 (9&nbsp;MB, do 4,0 GHz)</li>
-                           <li>Intel® Core™ i7-8700 (12&nbsp;MB, do 4,6&nbsp;GHz)</li>
-                        </ul>
-                        <strong>Memory</strong>
-                        <ul>
-                           <li>4&nbsp;GB DDR4 (4&nbsp;GB × 1)</li>
-                           <li>8&nbsp;GB DDR4 2400&nbsp;MHz (4&nbsp;GB&nbsp;×&nbsp;2</li>
-                           <li>12&nbsp;GB DDR4 2400&nbsp;MHz (4&nbsp;GB + 8&nbsp;GB)</li>
-                           <li>16&nbsp;GB DDR4 2400&nbsp;MHz (16&nbsp;GB&nbsp;×&nbsp;1</li>
-                           <li>24&nbsp;GB DDR4 2400&nbsp;MHz (8&nbsp;GB + 16&nbsp;GB)</li>
-                           <li>32&nbsp;GB DDR4 2400&nbsp;MHz (16&nbsp;GB × 2)</li>
-                        </ul>
-                        <strong>Graphics</strong>
-                        <ul>
-                           <li>Intel® HD Graphics 610/630</li>
-                           <li>NVIDIA® GeForce® GT 710 2&nbsp;GB DDR3</li>
-                        </ul>
-	            	</div>
-	            	<div><img v-bind:src="item.imageBack"></div>
-	            </div>
-	        </div>
-	    </transition>
-		</div>
-		<div class="flex">
-      <div class="processor" v-bind:class="[(modalVisible || isScale || isBackCase) ? 'intel' : '']">
-          <img src="img/processor-intel.png">
-        </div>
-      <div class="sidebar" v-bind:class="[(modalVisible || isScale || isBackCase) ? 'blur' : '']">
-				<div class="wrapper">
-					<nav>
-						<ul class="l-items">
-							<li><a class="active" href="">Main</a></li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Hosting</a></li>
-							<li><a href="">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-			<div class="banner" v-bind:class="[(modalVisible || isScale || isBackCase) ? 'blur' : '']">
-				<div class="man"></div>
-			</div>
-			<div class="about">
-				<div class="front" v-on:click="isScale = !isScale; isActive = !isActive; isBackCase = false; modalVisible = false">
-					<img v-bind:src="item.image" v-bind:class="[isScale ? 'scale' : '']">
-				</div>
-				<div class="description" v-bind:class="[(modalVisible || isScale || isBackCase) ? 'blur' : '']">
-					<ul>
-            <li><strong>{{item.title}}</strong></li>
-            <li>Model - <strong>{{item.model}}</strong></li>
-            <li>Processor - <br><strong>{{item.processor}}</strong></li>
-            <li>Memory - <br><strong>{{item.memory}}</strong></li>
-            <li>Graphics - <br><strong>{{item.graphic}}</strong></li>
-            <li class="price">
-            	<transition vue-role="transition" name="price">
-            		<span v-if="priceVisible">{{item.price}} BYN</span>
-           		</transition>
-            </li>
-        	</ul>
-        	<div class="btns">
-        		<button class="btn" v-on:click="modalVisible = !modalVisible; isActive = !isActive">
-        			{{specBtnText}}
-        		</button>
-                <button class="btn" v-if="btnPriceVisible" v-on:click="priceVisible = !priceVisible">
-                	{{priceBtnText}}
-                </button>
-        	</div>
-				</div>
-			</div>
-			<div class="back" v-bind:class="[(modalVisible || isScale)  ? 'blur' : 'b']" v-on:click="isBackCase = !isBackCase; isActive = !isActive; isScale = false">
-				<img v-bind:src="item.imageBack" v-bind:class="[isBackCase ? 'scaleBackCase' : '']">
-			</div>
-		</div>
-		<div class="search">
-				<input placeholder="Search:" type="" name="" v-model="search">
-			<ul v-for="(item, index) of filteredItems" v-on:click="selectItem(item, index)"
-			:class="{'active': selectedItemIndex === index}">{{item.model}}
-			</ul>			
-    </div>
-    <div class="layer" v-bind:class="[(isScale || isBackCase) ? 'block' : '']">
-      <div class="details">
-        <div>
-        <p>The perfect solution for the office.</p>
-        <p><strong>Processor</strong></p>
-        <ul>
-          <li>Intel® 8th Generation Celeron® G4900 (2M Cache, 3.1 GHz)</li>
-          <li>8th Generation Intel® Pentium® G5400 (4MB Cache, 3.7 GHz)</li>
-          <li>8th Generation Intel® Core ™ i3-8100 (6MB Cache, 3.60 GHz)</li>
-          <li>8th Generation Intel® Core ™ i5-8400 (9MB Cache, up to 4.0 GHz)</li>
-          <li>8th Generation Intel® Core ™ i7-8700 (12MB Cache, up to 4.6 GHz)</li>
-        </ul>
-        <p><strong>Operating system</strong></p>
-        <ul>
-          <li>Windows® 10 (64-bit)&nbsp;</li>
-          <li>Windows® 10 Professional (64 bit)&nbsp;</li>
-          <li>Windows® 10 National Academic STF (64 bit)&nbsp;</li>
-          <li>Ubuntu</li>
-        </ul>
-        <p><strong>Memory</strong></p>
-        <ul>
-          <li>4 GB DDR4 (4 GB x 1)</li>
-          <li>8 GB DDR4 2400 MHz (4 GB x 2 or 8 GB x 1)</li>
-          <li>12 GB DDR4 2400 MHz (4 GB + 8 GB)</li>
-          <li>16 GB DDR4 2400 MHz (16 GB × 1 or 8 GB × 2)</li>
-          <li>24 GB DDR4 2400 MHz (8 GB + 16 GB)</li>
-          <li>32 GB DDR4 2400 MHz (16 GB x 2)</li>
-        </ul>
-        <p><strong>Graphics Card</strong></p>
-        <ul>
-          <li>Integrated Intel® HD Graphics 610/630</li>
-          <li>NVIDIA® GeForce® GT 710 with 2GB DDR3 memory</li>
-        </ul>
-        </div>
-      <div>
-        <p><strong>Dimensions</strong></p>
-        <ul>
-          <li>Height: 290mm × Width: 92.6mm × Depth: 293mm</li>
-          <li>Weight: 4.81 kg</li>
-        </ul>
-        <p><strong>Security</strong></p>
-        <ul>
-          <li>McAfee Security Center</li>
-          <li>Physical Security - Kensington anti-theft lock slot in chassis and lock</li>
-          <li>TPM 2.0 module (hardware and software)</li>
-          <li>Microsoft Windows Bitlocker&nbsp;</li>
-          <li>Wipe data from local hard drives via BIOS (secure erase function)&nbsp;</li>
-          <li>Computrace BIOS Agent Support - Manage Computrance and Proactive systems</li>
-        </ul>
-        <p><strong>Standard I / O ports</strong></p>
-        <p><strong>Front:</strong></p>
-        <ul>
-          <li>2 USB 3.0 ports</li>
-          <li>1 universal audio jack</li>
-          <li>1 5-in-1 memory card reader</li>
-        </ul>
-        <p><strong>Back:</strong>&nbsp;</p>
-        <ul>
-          <li>4 USB 2.0 ports</li>
-          <li>1 Gigabit Ethernet port</li>
-          <li>1 HDMI</li>
-          <li>1 VGA</li>
-          <li>1 triple audio jack supporting 5.1 surround sound</li>
-        </ul>
-        <p><strong>Power</strong></p>
-        <ul>
-          <li>standard 240W power supply</li>
-        </ul>
-      </div>
-      <div class="basement">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p class="copyright">2020 © iHelper.by</p>
-    </div>
-      </div>
-    </div>
-	</main>
-	<footer class="footer">
-		<div class="wrapper">
-			<div class="navbar">
-				<nav>
-					<ul>
-						<li><a href="">Consulting</a></li>
-						<li><a href="">Optimizing download speed</a></li>
-						<li><a href="">Hard disk data recovery</a></li>
-						<li><a href="">Remote computer assistance</a></li>
-						<li><a href="">System administration</a></li>
-						<li><a href="">Antivirus support</a></li>
-						<li><a href="">Cloud storage</a></li>
-						<li><a href="">Archiving and backup</a></li>
-						<li><a href="">Cleaning and tweaking the registry</a></li>
-						<li><a href="">LAN design</a></li>
-						<li><a href="">Installing and configuring SLL certificates</a></li>
-						<li><a href="">FTP servers and protocols management</a></li>
-						<li><a href="">Internal optimization of SPA and sites</a></li>
-						<li><a href="">Turnkey IT solutions creation</a></li>
-						<li><a href="">Item navbar menu</a></li>
-						<li><a href="">Item navbar menu</a></li>
-					</ul>
-				</nav>
-			</div>
-			<div class="contact">
-				<div class="head">
-					<div class="dell">
-						<img src="img/dell.png">
-					</div>
-				</div>
-				<div class="foot">
-					<div class="partner">
-						 <img src="img/dell-emc.png">
-					</div>
-					<div class="location">
-						<address>"Ayhelper Bai"<br>
-	                    Dzerzhinsky, 5<br>
-	                    220036 Minsk, BY Belarus<br>
-	                    +375298933459<br><a href="mailto:admin@ihelper.by">
-	                    admin@ihelper.by</a><br>
-	            <a href="https://ihelper.by">ihelper.by</a>
-	          </address>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footnav">
-			<nav>
-				<ul class="os">
-					<li><hr></li>
-					<li><img src="svg/logo/windows_logo.svg"><a href="">Windows</a></li>
-					<li><img src="svg/logo/apple_logo.svg"><a href="">macOS</a></li>
-					<li><img src="svg/logo/linux_logo.svg"><a href="">Linux</a></li>
-				</ul>
-			</nav>
-		</div>
-		<div class="basement">
-			<p>
-         As a Microsoft IoT partner, we can offer any programs and services available on the international IT market. The products and services presented on the site are only part of our offer. We also develop unique IT solutions for companies and individual entrepreneurs. Our programmers are ready to solve a problem of any complexity: from setting up a PC to developing powerful applications and optimizing online businesses.<a href="">Contact us.</a>
-      </p>
-      <p class="copyright">2020 © iHelper.by</p>
-		</div>
-	</footer>
-<script src="app.js"></script>
-<script src="following.js"></script>
-<script src="zoom.js"></script>
-<script src="darkmode.js"></script>
-</body>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>iHelper | IT-consulting</title>
+      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="css/darkmode.css">
+      <link rel="stylesheet" type="text/css" href="css/zoom.css">
+      <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+   </head>
+   <body>
+      <header id="header">
+      	<top></top>
+      </header>
+      <main id="app">
+         <app></app>
+      </main>
+      <footer id="footer">
+         <bottom></bottom>
+      </footer>
+      <script src="js/header.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/footer.js"></script>
+      <script src="js/following.js"></script>
+      <script src="js/zoom.js"></script>
+      <script src="js/darkmode.js"></script>
+   </body>
 </html>
