--- a/support.html
+++ b/support.html
@@ -31,7 +31,7 @@
                      </nav>
                   </div>
                </div>
-               <div class="banner">
+               <div class="banner pagetitle">
                   <div class="pagename">Support</div>
                </div>
                <div class="about notmain">
