refactor: minor updates

--- a/support.html
+++ b/support.html
@@ -31,17 +31,17 @@
                      </nav>
                   </div>
                </div>
-               <div class="banner pagetitle">
+               <div class="banner pagetitle server">
                   <div class="pagename">Support</div>
                </div>
                <div class="about notmain">
-                  <div class="front">
+                  <div class="front marquee">
                      <iframe src="marquee/index.html"></iframe>
                   </div>
                   <div class="banner support">
                   </div>
                </div>
-               <div class="back">Computers
+               <div class="back">
                  <img src="img/xps-13/xps-13-9380_02.png">
                </div>
             </div>
